--- a/style.css
+++ b/style.css
@@ -45,4 +45,20 @@ body{
 .presentacion__enlaces{
     display: flex;
     justify-content: space-between;
+    
+    
+}
+
+.presentacion__enlaces__link{
+    width: 280px; 
+    background-color: #22D4FD;
+    text-align: center;
+    padding: 21.5px 0; /*El espacio entre el texto y el borde del boton*/
+    border-radius: 16px; /*Bordes redondeados*/
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
+    font-weight: 600; /*Hace referencia al tamaño de la semi-bold*/
+    text-decoration: none; /*Sin decoraciones para sacarle el subrayado al texto*/
+    color: #000000;
+
 }
