--- a/style.css
+++ b/style.css
@@ -48,20 +48,27 @@ body{
 .presentacion__enlaces{
     display: flex;
     justify-content: space-between;
-    
-    
+    flex-direction: column; /*organiza el contenido en columnas*/
+    align-items: center; /*Permite a las columnas alinear el contenido*/    
+    gap: 32px; /*El espacio entre los botones*/
+}
+
+.presentacion__enlaces__subtitulo{
+    font-family: "Krona One", sans-serif;
+    font-size: 24px;
+    font-weight: 400; /*El tamaño de letra "Regular"*/
 }
 
 .presentacion__enlaces__link{
-    width: 280px; 
-    background-color: #22D4FD;
+    width: 378px; 
     text-align: center;
     padding: 21.5px 0; /*El espacio entre el texto y el borde del boton*/
-    border-radius: 16px; /*Bordes redondeados*/
+    border-radius: 8px; /*Bordes redondeados*/
     font-family: "Montserrat", sans-serif;
     font-size: 24px;
     font-weight: 600; /*Hace referencia al tamaño de la semi-bold*/
     text-decoration: none; /*Sin decoraciones para sacarle el subrayado al texto*/
-    color: #000000;
+    color: #F6F6F6;
+    border: 2px solid #22D4FD;/*El tamaño del borde, el estilo y el color*/
 
 }
